--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Plan your dream trip</h1>
-    <h2>Destination Madrid</h2>
+    <div class="container">
+      <header>
+        <h3>.travel.</h3>
+        <h1>Plan your dream trip</h1>
+        <h2>Destination Madrid</h2>
+        <a href="#more">Learn More</a>
+      </header>
+    </div>
   </body>
 </html>
