Added the planning section of the page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,62 @@
         <h2>Destination Madrid</h2>
         <a href="#more">Learn More</a>
       </header>
+      <main>
+        <section class="planning">
+          <h3 class="text-center">To-Do</h3>
+          <h2 class="text-center">Step-by-Step Travel Planning</h2>
+          <div class="grid-two-columns">
+            <div class="grid-cell">
+              <h3>1. Decide on travel dates</h3>
+              <p>Pick your ideal arrival and departure dates.</p>
+            </div>
+
+            <div class="grid-cell">
+              <h3>2. Book Flights</h3>
+              <p>
+                Compare flights on
+                <a href="https://www.skyscanner.co.za/" target="blank"
+                  >SkyScanner</a
+                >
+              </p>
+            </div>
+
+            <div class="grid-cell">
+              <h3>3. Get Your Visa</h3>
+              <p>
+                Check visa requirements via
+                <a
+                  href="https://www.vfsglobal.com/en/individuals/index.html"
+                  target="_blank"
+                  >VFS Global</a
+                >
+              </p>
+            </div>
+
+            <div class="grid-cell">
+              <h3>4. Find Accomodation</h3>
+              <p>
+                Browse stays on
+                <a
+                  href="https://www.booking.com/index.en-gb.html?label=gen173nr-10CAEoggI46AdIM1gEaPsBiAEBmAEzuAEXyAEM2AED6AEB-AEBiAIBqAIBuAKu3p3EBsACAdICJGVlOGRiNWM1LTgzZGQtNDRlOS04ZDg1LTEzY2NiNjg1MWFhNNgCAeACAQ&sid=97dc69ba2f63b25f1363ad5e965b2a11&keep_landing=1&sb_price_type=total&"
+                  target="_blank"
+                  >Booking.com</a
+                >
+              </p>
+            </div>
+
+            <div class="grid-cell">
+              <h3>5. Create Itinerary</h3>
+              <p>Map out must-see attractions</p>
+            </div>
+
+            <div class="grid-cell">
+              <h3>6. Pack & Go!</h3>
+              <p>Prepare travel docs, bags, and have fun!🛫</p>
+            </div>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
