Added an h3 in the social media section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         </section>
 
         <section class="socials">
+          <h3 class="text-center">.Socials.</h3>
           <h2 class="text-center">Hottest Happenings in Madrid</h2>
           <div class="grid-three-columns">
             <div>
