--- a/index.html
+++ b/index.html
@@ -974,6 +974,16 @@
           </div>
         </section>
       </main>
+
+      <footer class="text-center">
+        <h2>Come explore Madrid with me!!!!!!</h2>
+        <p>
+          Sophie Nkateko Ndobe is creative developer passionate about clean,
+          user-focused experiences.
+          <br />
+          © 2025 Sophie Ndobe. All rights reserved.
+        </p>
+      </footer>
     </div>
   </body>
 </html>
