Added functionality to the Learn More link and added styling to the other links

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </header>
       <main>
         <section class="planning">
+          <a name="more"></a>
           <h3 class="text-center">To-Do</h3>
           <h2 class="text-center">Step-by-Step Travel Planning</h2>
           <div class="grid-two-columns">
@@ -978,8 +979,13 @@
       <footer class="text-center">
         <h2>Come explore Madrid with me!!!!!!</h2>
         <p>
-          Sophie Nkateko Ndobe is creative developer passionate about clean,
-          user-focused experiences.
+          <strong
+            ><a href="https://github.com/Sophie-Ndobe?tab=repositories"
+              >Sophie Nkateko Ndobe</a
+            ></strong
+          >
+          is creative developer passionate about clean, user-focused
+          experiences.
           <br />
           © 2025 Sophie Ndobe. All rights reserved.
         </p>
