--- a/index.html
+++ b/index.html
@@ -78,6 +78,132 @@
             </div>
           </div>
         </section>
+        <section>
+          <div class="text-center">
+            <h3>.My List.</h3>
+            <h2>Countdown to Iconic Madrid Spots!</h2>
+          </div>
+          <div class="grid-three-columns cards-container">
+            <div class="grid-cell-cards">
+              <div class="grid-two-columns-cards">
+                <div>
+                  <img src="/images/cards/la rollerie.jpg" class="card-image" />
+                </div>
+                <div>
+                  <iframe
+                    class="card-image"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12213.223249597706!2d-3.7151670226448084!3d40.42024558399257!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42287ec68ed4ff%3A0x47e5c1c1380254e2!2sLa%20Rollerie!5e1!3m2!1sen!2sza!4v1753968966510!5m2!1sen!2sza"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
+              </div>
+              <h3>La Rollerie💃</h3>
+              <p>
+                As a true coffee enthusiast, the thought of finally visiting my
+                favourite café in Madrid fills me with pure joy. There’s
+                something magical about stepping into that familiar space — the
+                rich aroma of freshly brewed coffee, the cozy hum of
+                conversation, and the comforting atmosphere that makes every
+                visit feel special. I’ve dreamed of tasting their signature
+                blend straight from the source, watching the baristas work their
+                craft, and soaking in the vibrant local vibe that makes this
+                spot so unique.
+                <br />
+                It’s more than just a cup of coffee; it’s a long-awaited moment,
+                a chance to connect with the heart and soul of Madrid’s café
+                culture.
+                <br />
+                <a href="https://larollerie.com/" target="_blank"
+                  >Visit La Rollerie's website</a
+                >
+              </p>
+            </div>
+            <div class="grid-cell-cards">
+              <div class="grid-two-columns-cards">
+                <div>
+                  <img
+                    src="/images/cards/real-madrid-players.jpg"
+                    class="card-image"
+                  />
+                </div>
+                <div>
+                  <iframe
+                    class="card-image"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3051.816964406923!2d-3.69091398840775!3d40.453038671314644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228e23705d39f%3A0xa8fff6d26e2b1988!2zQmVybmFiw6l1!5e1!3m2!1sen!2sza!4v1753955144674!5m2!1sen!2sza"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
+              </div>
+              <h3>Hala Madrid⚽</h3>
+              <p>
+                As a die-hard soccer fan, the thought of watching my favorite
+                team play in Madrid fills me with pure excitement. There’s
+                nothing like the electric atmosphere of a live match at one of
+                the city’s iconic stadiums — the roar of the crowd, the chants
+                echoing through the stands, and the thrill of seeing the players
+                I’ve admired for years in action.
+                <br />
+
+                It’s more than just a game; it’s a dream come true, a chance to
+                be part of the passion and energy that makes Madrid one of the
+                greatest football cities in the world.
+                <br />
+                <br />
+                To learn more about real madrid:
+                <br />
+                <a href="https://www.realmadrid.com/en-US" target="_blank"
+                  >Visit Real Madrid Website</a
+                >
+              </p>
+            </div>
+            <div class="grid-cell-cards">
+              <div class="grid-two-columns-cards">
+                <div>
+                  <img
+                    src="/images/cards/madrid-christmas-lights.jpg"
+                    class="card-image"
+                  />
+                </div>
+                <div>
+                  <iframe
+                    class="card-image"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3053.305790281577!2d-3.7074153884094216!3d40.42024607131983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422932eaded8db%3A0x30dc801aa1dd675b!2spuerta%20del%20sol!5e1!3m2!1sen!2sza!4v1753968755828!5m2!1sen!2sza"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
+              </div>
+              <h3>Madrid Christmas🎄</h3>
+              <p>
+                As someone who loves the magic of the holiday season, the
+                thought of seeing the Christmas lights in Madrid fills me with
+                childlike wonder. There’s nothing quite like strolling through
+                the city as it transforms into a glowing winter dream —
+                sparkling streets, dazzling displays draped across historic
+                buildings, and the festive buzz in the air that brings people
+                together. I’ve always imagined standing beneath those lights,
+                wrapped in the warmth of the season, taking in the beauty and
+                joy all around me. It’s more than just decoration; it’s a
+                magical experience, a chance to feel the spirit of Madrid at its
+                most enchanting.
+                <br />
+                <a
+                  href="https://www.esmadrid.com/en/christmas-in-madrid"
+                  target="_blank"
+                  >Click link to learn more</a
+                >
+              </p>
+            </div>
+          </div>
+        </section>
 
         <section class="socials">
           <h3 class="text-center">.Socials.</h3>
