--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
             <div class="grid-cell-cards">
               <div class="grid-two-columns-cards">
                 <div>
-                  <img src="/images/cards/la rollerie.jpg" class="card-image" />
+                  <img
+                    src="/images/cards/la rollerie.jpg"
+                    alt="La Rollerie image"
+                    class="card-image"
+                  />
                 </div>
                 <div>
                   <iframe
@@ -126,6 +130,7 @@
                 <div>
                   <img
                     src="/images/cards/real-madrid-players.jpg"
+                    alt="Real Madrid Players Image"
                     class="card-image"
                   />
                 </div>
@@ -167,6 +172,7 @@
                 <div>
                   <img
                     src="/images/cards/madrid-christmas-lights.jpg"
+                    alt="Christmas lights image"
                     class="card-image"
                   />
                 </div>
